# cosc480_opencv

./: CMakeLists.txt  main.cpp
Harris_corner_detector/: harris_corner_detector.cpp
Shi-Tomasi_corner_detector/: shi-Tomasi_corner_detector.cpp
my_feature_detector/: my_feature_detector.cpp
playground/: playground.cpp
tutorial_01/: tutorial_01.cpp
tutorial_01_Mat/: tutorial_01_Mat.cpp
tutorial_02/: main.cpp  tutorial_02.cpp
